# Setup_SDLforClion

./: CMakeLists.txt  def.h  graphics.h  main.cpp
cmake_modules/: FindSDL2_image.cmake
